[package]
name = "bls12-381"
version = "0.1.0"
edition = "2021"

[dependencies]
bls12-381-methods = { path = "methods" }
risc0-zkvm = { path = "../../risc0/zkvm" }

ark-bls12-381 = "0.3.0"
ark-ff = "0.3.0"
ark-serialize = "0.3.0"
ark-std = "0.3.0"
ark-ec = "0.3.0"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
