[package]
name = "bls12-381"
version = "0.1.0"
edition = "2021"

[lib]
name = "bls12_381"
path = "src/lib.rs"

[dependencies]
bls12-381-methods = { path = "methods" }
shared = { path = "shared" }
risc0-zkvm = { path = "../../risc0/zkvm" }

ark-bls12-381 = "0.3.0"
ark-ff = "0.3.0"
ark-serialize = "0.3.0"
ark-std = "0.3.0"
ark-ec = "0.3.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false
